objects/Compensation_Estimator_Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Member Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Premium__c</fullName>
        <formula>If( Number_of_Cases__c = 0, 0, Total_Premium__c/Number_of_Cases__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Payment__c</fullName>
        <formula>If ( ISPICKVAL(Unit_of_Measure__c,&quot;Members&quot;), Amount__c* Rate__c, 

If ( AND(ISPICKVAL(Unit_of_Measure__c,&quot;Premium&quot;), Is_Variable__c = FALSE), Total_Premium__c*Rate__c,

If ( AND(ISPICKVAL(Unit_of_Measure__c,&quot;Premium&quot;), Is_Variable__c = TRUE, Premium_Level__c = &quot;2&quot;), 

(Min_Premium_for_LOB__c*Number_of_Cases__c*Premium_Rate_Tier_1__c) + (Total_Premium__c - (Min_Premium_for_LOB__c*Number_of_Cases__c ))*Premium_Rate_Tier_2__c,


If ( AND(ISPICKVAL(Unit_of_Measure__c,&quot;Premium&quot;), Is_Variable__c = TRUE, Premium_Level__c = &quot;3&quot;),


(Min_Premium_for_LOB__c*Number_of_Cases__c*Premium_Rate_Tier_1__c) + (Min_Premium_for_LOB__c*Number_of_Cases__c*Premium_Rate_Tier_2__c)

+ (Total_Premium__c-(Minimum_Premium__c*Number_of_Cases__c ))*Premium_Rate_Tier_3__c, 0

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rate_Formula__c</fullName>
        <formula>If (   Is_Variable__c =  TRUE, &quot;Variable&quot;,

If ( Rate__c &lt; 1, &quot;$&quot;&amp;&quot;0&quot;&amp;Text(Rate__c), &quot;$&quot;&amp;Text(Rate__c)

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>zzz DELETE Rate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_of_Last_Viewed_CE__c</fullName>
        <formula>Compensation_Estimator__c = Left(  $Setup.Last_Viewed_Compensation_Estimator__c.Compensation_Estimator_Id__c , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP of Last Viewed CE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensation_Estimator__c</fullName>
        <label>Compensation Estimator</label>
        <referenceTo>Compensation_Estimator__c</referenceTo>
        <relationshipLabel>Compensation Estimator Products</relationshipLabel>
        <relationshipName>Compensation_Estimator_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Variable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Premium__c</fullName>
        <inlineHelpText>Shows the minimum threshold allowed for a line of business premium payout</inlineHelpText>
        <label>Maximum Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Premium_for_LOB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Premium for LOB</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Premium__c</fullName>
        <inlineHelpText>Shows the minimum threshold allowed for a line of business premium payout</inlineHelpText>
        <label>Minimum Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For product types with case premium thresholds, shows the level for this variable calculation</inlineHelpText>
        <label>Premium Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Rate_Tier_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Rate Tier 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Rate_Tier_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Rate Tier 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Rate_Tier_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Rate Tier 3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured (includes Retail Pharm Incentive)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Set__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_1_Maximum__c</fullName>
        <inlineHelpText>Displays the maximum premium for the first tier (or level) of a line of business</inlineHelpText>
        <label>Tier 1 Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Rate__c</fullName>
        <inlineHelpText>Stores the Tier (level) 1 rate for the lines of business with tiered premiums</inlineHelpText>
        <label>Tier 1 Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <inlineHelpText>Stores the Tier (level) 2 rate for the lines of business with tiered premiums</inlineHelpText>
        <label>Tier 2 Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compensation Estimator Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Comp_Estimator_New_Business_Goals</fullName>
        <columns>NAME</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Goal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <filters>
            <field>Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Goals (Delete)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Comp_Estimator_Products_New_Business</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Premium__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Base_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>New Business Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Comp_Estimator_Products_Renewal</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Premium__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Base_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </filters>
        <label>Renewal Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Member_Renewals</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Base_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Members</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Product__c.Compensation_Estimator_Product_Members</value>
        </filters>
        <label>Renewal Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Business_Members</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Base_Payment__c</columns>
        <columns>Goal_Eligible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Members</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Product__c.Compensation_Estimator_Product_Members</value>
        </filters>
        <label>New Business Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Business_Premium</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Total_Premium__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Base_Payment__c</columns>
        <columns>Goal_Eligible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Product__c.Compensation_Estimator_Products_Premiums</value>
        </filters>
        <label>New Business Premiums</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Premium_Renewals</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Total_Premium__c</columns>
        <columns>Number_of_Cases__c</columns>
        <columns>Base_Rate_Formula__c</columns>
        <columns>Base_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEP_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Product__c.Compensation_Estimator_Products_Premiums</value>
        </filters>
        <label>Renewal Premiums</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CEP-{00000000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Estimator Products</pluralLabel>
    <recordTypes>
        <fullName>Compensation_Estimator_Product_Members</fullName>
        <active>true</active>
        <label>Compensation Estimator Product Members</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compensation_Estimator_Products_Premiums</fullName>
        <active>true</active>
        <label>Compensation Estimator Products Premiums</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Premium_between_min_and_max</fullName>
        <active>true</active>
        <description>The total premium must be greater than the lower/minimum premiums</description>
        <errorConditionFormula>AND ( NOT(ISNEW()), Average_Premium__c &gt; 0, 
OR(Average_Premium__c &lt;= Minimum_Premium__c, Average_Premium__c &gt; Maximum_Premium__c))</errorConditionFormula>
        <errorDisplayField>Total_Premium__c</errorDisplayField>
        <errorMessage>The Total Premium must be within the min/max range multiplied by the number of cases (e.g. $60k * # of cases)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Premium_And_No_Of_Case_Not_Zero</fullName>
        <active>true</active>
        <description>Either Total Premium And No Of Case Not Zero</description>
        <errorConditionFormula>AND ( NOT(ISNEW()),

OR ( 

AND ( Total_Premium__c = 0,  Number_of_Cases__c &gt; 0),
AND ( Total_Premium__c &gt; 0,  Number_of_Cases__c = 0)))</errorConditionFormula>
        <errorDisplayField>Total_Premium__c</errorDisplayField>
        <errorMessage>Please complete Total Premium or Number Case</errorMessage>
    </validationRules>
</CustomObject>